--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel = "icon" href = "https://raw.githubusercontent.com/97saurabh/Calculator/master/logo.png" 
-        type = "image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -203,7 +201,7 @@
                       <p style="margin-left: 30px;">{</p>
 
 
-                          <p style="margin-left: 45px;">"url": "http://127.0.0.1:8000/users/1/",</p>
+                          <p style="margin-left: 45px;">"url": "http://saurabh-rest-django.herokuapp.com/users/1/",</p>
                           <p style="margin-left: 45px;"> "id": 1,</p>
                           <p style="margin-left: 45px;">"username": saurabh1,</p>
                           <p style="margin-left: 45px;"> "snippets": [</p>
@@ -218,7 +216,7 @@
                       <p style="margin-left: 30px;">{</p>
 
 
-                        <p style="margin-left: 45px;">"url": "http://127.0.0.1:8000/users/1/",</p>
+                        <p style="margin-left: 45px;">"url": "http://saurabh-rest-django.herokuapp.com/users/1/",</p>
                         <p style="margin-left: 45px;"> "id": 1,</p>
                         <p style="margin-left: 45px;">"username": saurabh1,</p>
                         <p style="margin-left: 45px;"> "snippets": [</p>
@@ -287,7 +285,7 @@
                       <p style="margin-left: 15px;">{</p>
 
 
-                          <p style="margin-left: 30px;">"url": "http://127.0.0.1:8000/users/1/",</p>
+                          <p style="margin-left: 30px;">"url": "http://saurabh-rest-django.herokuapp.com/users/1/",</p>
                           <p style="margin-left: 30px;"> "id": 1,</p>
                           <p style="margin-left: 30px;">"username": saurabh1,</p>
                           <p style="margin-left: 30px;"> "snippets": [</p>
@@ -351,9 +349,9 @@
                         <p style="margin-left: 30px;">{</p>
 
 
-                            <p style="margin-left: 45px;">"url": "http://127.0.0.1:8000/snippets/1/",</p>
+                            <p style="margin-left: 45px;">"url": "http://saurabh-rest-django.herokuapp.com/snippets/1/",</p>
                             <p style="margin-left: 45px;"> "id": 1,</p>
-                            <p style="margin-left: 45px;">"highlight": "http://127.0.0.1:8000/snippets/1/highlight/",</p>
+                            <p style="margin-left: 45px;">"highlight": "http://saurabh-rest-django.herokuapp.com/snippets/1/highlight/",</p>
                             <p style="margin-left: 45px;"> "owner": "saurabh1",</p>
                             <p style="margin-left: 45px;">"title": "",</p>
                             <p style="margin-left: 45px;"> "code": "print(\"Hello World\")",</p>
@@ -366,9 +364,9 @@
                         <p style="margin-left: 30px;">{</p>
 
 
-                            <p style="margin-left: 45px;">"url": "http://127.0.0.1:8000/snippets/2/",</p>
+                            <p style="margin-left: 45px;">"url": "http://saurabh-rest-django.herokuapp.com/snippets/2/",</p>
                             <p style="margin-left: 45px;"> "id": 2,</p>
-                            <p style="margin-left: 45px;">"highlight": "http://127.0.0.1:8000/snippets/2/highlight/",</p>
+                            <p style="margin-left: 45px;">"highlight": "http://saurabh-rest-django.herokuapp.com/snippets/2/highlight/",</p>
                             <p style="margin-left: 45px;"> "owner": "saurabh1",</p>
                             <p style="margin-left: 45px;">"title": "",</p>
                             <p style="margin-left: 45px;"> "code": "print(\"Hello World\")",</p>
@@ -471,9 +469,9 @@
                     <p style="margin-left: 15px;">{</p>
 
 
-                      <p style="margin-left: 30px;">"url": "http://127.0.0.1:8000/snippets/1/",</p>
+                      <p style="margin-left: 30px;">"url": "http://saurabh-rest-django.herokuapp.com/snippets/1/",</p>
                       <p style="margin-left: 30px;"> "id": 1,</p>
-                      <p style="margin-left: 30px;">"highlight": "http://127.0.0.1:8000/snippets/1/highlight/",</p>
+                      <p style="margin-left: 30px;">"highlight": "http://saurabh-rest-django.herokuapp.com/snippets/1/highlight/",</p>
                       <p style="margin-left: 30px;"> "owner": "saurabh1",</p>
                       <p style="margin-left: 30px;">"title": "",</p>
                       <p style="margin-left: 30px;"> "code": "print(\"Hello World\")",</p>
@@ -527,9 +525,9 @@
                       <p style="margin-left: 15px;">{</p>
 
 
-                          <p style="margin-left: 30px;">"url": "http://127.0.0.1:8000/snippets/1/",</p>
+                          <p style="margin-left: 30px;">"url": "http://saurabh-rest-django.herokuapp.com/snippets/1/",</p>
                           <p style="margin-left: 30px;"> "id": 1,</p>
-                          <p style="margin-left: 30px;">"highlight": "http://127.0.0.1:8000/snippets/1/highlight/",</p>
+                          <p style="margin-left: 30px;">"highlight": "http://saurabh-rest-django.herokuapp.com/snippets/1/highlight/",</p>
                           <p style="margin-left: 30px;"> "owner": "saurabh1",</p>
                           <p style="margin-left: 30px;">"title": "",</p>
                           <p style="margin-left: 30px;"> "code": "print(\"Hello World\")",</p>
@@ -639,9 +637,9 @@
                   <p style="margin-left: 15px;">{</p>
 
 
-                    <p style="margin-left: 30px;">"url": "http://127.0.0.1:8000/snippets/1/",</p>
+                    <p style="margin-left: 30px;">"url": "http://saurabh-rest-django.herokuapp.com/snippets/1/",</p>
                     <p style="margin-left: 30px;"> "id": 1,</p>
-                    <p style="margin-left: 30px;">"highlight": "http://127.0.0.1:8000/snippets/1/highlight/",</p>
+                    <p style="margin-left: 30px;">"highlight": "http://saurabh-rest-django.herokuapp.com/snippets/1/highlight/",</p>
                     <p style="margin-left: 30px;"> "owner": "saurabh1",</p>
                     <p style="margin-left: 30px;">"title": "",</p>
                     <p style="margin-left: 30px;"> "code": "print(\"Hello World\")",</p>
@@ -744,9 +742,9 @@
                   <p style="margin-left: 15px;">{</p>
 
 
-                    <p style="margin-left: 30px;">"url": "http://127.0.0.1:8000/snippets/1/",</p>
+                    <p style="margin-left: 30px;">"url": "http://saurabh-rest-django.herokuapp.com/snippets/1/",</p>
                     <p style="margin-left: 30px;"> "id": 1,</p>
-                    <p style="margin-left: 30px;">"highlight": "http://127.0.0.1:8000/snippets/1/highlight/",</p>
+                    <p style="margin-left: 30px;">"highlight": "http://saurabh-rest-django.herokuapp.com/snippets/1/highlight/",</p>
                     <p style="margin-left: 30px;"> "owner": "saurabh1",</p>
                     <p style="margin-left: 30px;">"title": "",</p>
                     <p style="margin-left: 30px;"> "code": "print(\"Hello World\")",</p>
